objects/BMCServiceDesk__BMC_BaseRelationship__c.object
<CustomObject>
    <description>BMC_BaseRelationship. CMDB Relationship class that is a common base class (located at the top of the inheritance tree) for the relationship classes in the CDM. Though you are unlikely to create any instances of this class, you can use its form as a single place to query for all relationships.  Attributes of this class are inherited by all relationship classes. In addition to attributes (such as Name) that you populate for all relationships, BMC_BaseRelationship also contains core attributes (such as InstanceId, ReconciliationIdentity, and ClassId) that are populated automatically by the CMDB, and CreateDate, populated automatically by the application.  Use the Name attribute of BMC_BaseRelationship to further categorize relationships according to the Relationship Normalization Table found in  CMDB Common Data Model documentation.  For configuration item (CI) classes, the CDM common base class is BMC_BaseElement.  This class has no corresponding DMTF CIM class</description>
    <fields>
        <fullName>BMCServiceDesk__AccountID__c</fullName>
        <label>AccountID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignedTo__c</fullName>
        <label>AssignedTo</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Atrium_ImpactDirection__c</fullName>
        <label>Atrium Impact Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Source-Destination</fullName>
                </value>
                <value>
                    <fullName>Destination-Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeDataSourceList__c</fullName>
        <label>AttributeDataSourceList</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBRowLevelSecurity__c</fullName>
        <label>CMDBRowLevelSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBWriteSecurity__c</fullName>
        <label>CMDBWriteSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMDB_Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>BMC_BaseRelationships</relationshipLabel>
        <relationshipName>BMC_BaseRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassId__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the ID of the class whose instance is being created.</inlineHelpText>
        <label>Class ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DatasetId__c</fullName>
        <label>DatasetId</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_ClassId__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__ClassID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.ClassId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_ClassName__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_DatasetId__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__DatasetId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.DatasetId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_InstanceId__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.InstanceId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_InstanceName__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.InstanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination_ReconciliationIdentity__c</fullName>
        <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__ReconciliationIdentity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination.ReconciliationIdentity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>BMC_BaseRelationships (Destination)</relationshipLabel>
        <relationshipName>BMC_BaseRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HasImpact__c</fullName>
        <label>HasImpact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactDirection__c</fullName>
        <inlineHelpText>From the list of options, select the impact direction of the relationship.</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Related</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Destination-Source</fullName>
                </value>
                <value>
                    <fullName>Has Impact</fullName>
                </value>
                <value>
                    <fullName>Member of Collection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service-Offering</fullName>
                </value>
                <value>
                    <fullName>Service-Subservice</fullName>
                </value>
                <value>
                    <fullName>Source-Destination</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactPropagationModel__c</fullName>
        <label>ImpactPropagationModel</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactWeight__c</fullName>
        <label>ImpactWeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <inlineHelpText>This field is automatically set to the GUID that is automatically generated as an Relationship ID for the relationship.</inlineHelpText>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Role__c</fullName>
        <description>This field is for programmatically calculating what role (source / destination) the related instance holds in the relationship w.r.t to concerned CI and can be customized to display in Relationship list view. This fields does not hold any data and shouldn&apos;t be used for any other purposes.</description>
        <label>Instance Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the user who last modified the relationship.</inlineHelpText>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to mark this relationship as soft deleted.</inlineHelpText>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Name__c</fullName>
        <label>Relationship Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_UniqueCIRelationshipID_CaseSens__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Use this field (case sensitive) to populate unique identifier of Configuration Item Relationships as identified in any source application like BMC Helix Discovery.</description>
        <externalId>true</externalId>
        <label>Unique CI Relationship ID-CaseSens</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ReconciliationIdentity__c</fullName>
        <description>ReconciliationIdentity</description>
        <label>ReconciliationIdentity</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RequestId__c</fullName>
        <label>RequestId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShortDescription__c</fullName>
        <inlineHelpText>Use this field to enter a description of the relationship. The description should indicate which instance is the source member and which is the destination member of the relationship.</inlineHelpText>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_ClassId__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__ClassID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.ClassId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_ClassName__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_DatasetId__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__DatasetId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.DatasetId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_InstanceId__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.InstanceId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_InstanceName__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.InstanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source_ReconciliationIdentity__c</fullName>
        <formula>BMCServiceDesk__Source__r.BMCServiceDesk__ReconciliationIdentity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source.ReconciliationIdentity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>BMC_BaseRelationships</relationshipLabel>
        <relationshipName>BMC_BaseRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Submitter__c</fullName>
        <formula>CreatedBy.FirstName  + &apos;  &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueCIRelationshipID__c</fullName>
        <externalId>true</externalId>
        <label>Unique CI Relationship ID</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueDestinationCIID__c</fullName>
        <label>Unique Destination CI ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueSourceCIID__c</fullName>
        <label>Unique Source CI ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Base Relationship</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__InstanceID__c</columns>
        <columns>BMCServiceDesk__ClassId__c</columns>
        <columns>BMCServiceDesk__Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_BaseRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Restrict_Impact_Direction_update</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(PRIORVALUE( BMCServiceDesk__ImpactDirection__c ) , &apos;Service-Offering&apos;) &amp;&amp; ( !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Subservice&apos;) &amp;&amp; !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Offering&apos;)))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__AccountID__c</errorDisplayField>
        <errorMessage>The selected Impact Direction is not valid. The valid Impact Direction is Service-Offering for this relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Restrict_Impact_Direction_update1</fullName>
        <active>true</active>
        <errorConditionFormula>((!ISPICKVAL(PRIORVALUE( BMCServiceDesk__ImpactDirection__c ) ,&apos;Service-Offering&apos;)
&amp;&amp;!ISPICKVAL(PRIORVALUE( BMCServiceDesk__ImpactDirection__c ) , &apos;Service-Subservice&apos;))
&amp;&amp; ( ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Subservice&apos;) || ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Offering&apos;)))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__AccountID__c</errorDisplayField>
        <errorMessage>The selected Impact Direction is not valid. The valid Impact Direction is Other, Unknown, Source-Destination, or Destination-Source for this relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Restrict_Impact_Direction_update2</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(PRIORVALUE( BMCServiceDesk__ImpactDirection__c ) , &apos;Service-Subservice&apos;) &amp;&amp; ( !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Subservice&apos;) &amp;&amp; !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Offering&apos;)))</errorConditionFormula>
        <errorDisplayField>BMCServiceDesk__AccountID__c</errorDisplayField>
        <errorMessage>The selected Impact Direction is not valid. The valid Impact Direction is Service-Subservice for this relationship.</errorMessage>
    </validationRules>
</CustomObject>